# neuropower-core

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.txt  README.md  README.rst  example_script.ipynb  pyproject.toml  setup.py  tox.ini
.github/: codespell_ignore_words.txt  dependabot.yml
.github/workflows/: run_precommit.yml  tests.yml  update_precommit_hooks.yml
neuropower/: BUM.py  __init__.py  _version.py  cluster.py  neuropowermodels.py  peakdistribution.py  run.py
neuropower/tests/: test_bum.py  test_cluster.py  test_neuropowermodels.py  test_peakdistribution.py
tests/: test_bum.py  test_neuropowermodels.py  test_peakdistribution.py
